added more css, and used flexbox

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,24 +1,36 @@
 *{
   box-sizing: border-box;
+  overflow: auto;
 }
 body {
+  overflow: auto;
   color:White;
   background-image:url('http://yodobi.com/4k-Wallpapers/black-background-Is-4K-Wallpaper.jpg');
   background-repeat: no-repeat;
+  background-attachment:fixed;
   background-size: cover;
   height: 100%;
   width: 100%;
-  font-family:verdana;
+  font-family: 'Indie Flower', cursive;
+  }
+.container {
+  clear: both;
+    overflow: auto;
+    max-width: 50%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   }
 a {
     color: rgb(216, 120, 23);
+    font-family: 'Indie Flower', cursive;
+    text-decoration: none;
   }
 header {
-  text-align:center;
+  display: flex;
+  justify-content: center;
 }
 nav {
-  clear:both;
-  text-align:center;
+  display: flex;
+  justify-content: center;
 }
 h1 {
   font-size:70px;
@@ -27,25 +39,64 @@ h2 {
   color: white;
 }
 section {
-  clear:both;
+  overflow: auto;
+  margin-left: 5rem;
 }
  .project-list {
-   overflow: auto;
+   clear: both;
+  overflow: auto;
   color: white;
-  background-color: pink;
+  background-color: lightblue;
+  max-width: 45%;
 }
 #head-shot {
+  width: 30%;
   display: block;
   margin-left: auto;
   margin-right: auto;
   border:1px solid white;
-  border-radius: 50%;
+  border-radius: 70%;
 }
 #contacts {
   text-align: center;
 }
 footer {
+  margin-left: 5rem;
   clear:both;
   font-style: italic;
   font-size: 13px;
+}
+
+.card {
+  box-shadow: 8px 4px 8px 0 rgba(0, 0, 0, 0.2);
+  width: 30%;
+  height: auto;
+  margin-right: 4rem;
+  text-align: center;
+  font-family: 'PT Sans', cursive;
+  background-color: lightblue;
+  float: right;
+
+}
+
+.title {
+  color: grey;
+  font-size: 18px;
+}
+
+button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+button:hover, a:hover {
+  opacity: 0.7;
 }
