--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -24,6 +24,9 @@ a {
     font-family: 'Indie Flower', cursive;
     text-decoration: none;
   }
+a:hover {
+    font-weight: bold;
+  }
 header {
   display: flex;
   justify-content: center;
@@ -31,6 +34,12 @@ header {
 nav {
   display: flex;
   justify-content: center;
+  font-size: 18px;
+  transition: font-size 4s 1s;
+}
+
+nav:hover {
+  font-size: 36px;
 }
 h1 {
   font-size:70px;
@@ -48,6 +57,7 @@ section {
   color: white;
   background-color: lightblue;
   max-width: 45%;
+  border: 1px solid pink;
 }
 #head-shot {
   width: 30%;
@@ -59,6 +69,10 @@ section {
 }
 #contacts {
   text-align: center;
+  transition: font-size 4s 1s;
+}
+#contacts:hover {
+  font-size: 36px;
 }
 footer {
   margin-left: 5rem;
@@ -71,12 +85,16 @@ footer {
   box-shadow: 8px 4px 8px 0 rgba(0, 0, 0, 0.2);
   width: 30%;
   height: auto;
+  border: 1px solid pink;
   margin-right: 4rem;
   text-align: center;
   font-family: 'PT Sans', cursive;
   background-color: lightblue;
   float: right;
+}
 
+p:nth-child(4) {
+  color: purple;
 }
 
 .title {
